--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Moveable Frames Image Reveal</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -13,6 +13,6 @@
 			</p>
 		</canvas>
 	</div>
-	<script type="text/javascript" src="script.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
